[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["unreal_qt"]


[project]
name = "unreal-qt"
authors = [
    {name = "Hannes D"},
]
description = "A Qt manager for Unreal that enables the use of PyQt & PySide in Unreal Engine"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["application", "unreal", "pyside", "pyqt", "qt", "engine", "unrealengine"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "PySide6", "unreal-stylesheet"]
#dynamic = ["version"]
version = "0.0.3"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/unreal-qt"
Source = "https://github.com/hannesdelbeke/unreal-qt"
